# ic-metrics

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
src/: bench.cpp  compare.cpp  harness.cpp  harness.h  ic_metrics.cpp  ic_metrics.h  ic_shared.h  ic_ssimulacra2.cc  ic_ssimulacra2.h  impl_cloudinary.cpp  impl_rust_av.cpp  impl_vship.cpp  impls.h  ssimudiff.cpp
